--- a/src/app/components/home/project-form/project-form.component.html
+++ b/src/app/components/home/project-form/project-form.component.html
@@ -3,7 +3,7 @@
     Add new project
   </div>
   <div class="card-body">
-    <form (ngSubmit)="onSubmit()">
+    <form #form="ngForm" (ngSubmit)="onSubmit(form)">
       <div class="form-group">
         <input
           type="text"
