--- a/src/app/components/project/logs-list/logs-list.component.html
+++ b/src/app/components/project/logs-list/logs-list.component.html
@@ -1,9 +1,9 @@
 <ul class="list-group mt-5">
   <li class="list-group-item d-flex justify-content-between align-content-center"
-    *ngFor="let log of logs"
+    *ngFor="let log of logs; let i = index"
   >
-      <span>{{ log.text }}t</span>
+      <span>{{ log.text }}</span>
       <span class="log-date ml-auto mr-5">{{ log.date }}</span>
-      <i class="fa fa-remove"></i>
+      <button class="btn btn-default" (click)="removeLog(log, i)"><i class="fa fa-remove"></i></button>
   </li>
 </ul>
